syntax = "proto3";

package jokes;


// The joke_storage.rb service
service Storage {
  // ask a joke from joke_storage.rb
  rpc GetJoke (JokesRequest) returns (Joke) {}
}

// how many jokes you want?
message JokesRequest {
  int32 number_of_jokes = 1;
}

// The response message containing the joke
message Joke {
  string joke = 1;
}
